<resources>
    <string name="app_name">HokusFokus</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_new_task">New Task</string>

    <string name="title_activity_task">TaskActivity</string>
    <string name="title_activity_setting">Settings</string>

    <string name="reminder">Reminder</string>
    <string name="set_task_reminder">Set Task Reminder</string>
    <string name="set_focus_hour_reminder">Set Focus Hour Reminder</string>
    <string name="focus_hour">Focus Hour</string>

    <string name="cancel_dailog">Cancel</string>

    <string name="title_activity_history">HistoryActivity</string>
    <string name="timer_default_text">00:00:00</string>

    <string name="empty_text">No Task Found!!</string>
    <string name="action_history">History</string>
    <string name="activity_history_year">2015</string>
    <string name="activity_settings_dialog_select_time_title">Select Time</string>
    <string name="activity_settings_dialog_positive">SELECT</string>
    <string name="activity_settings_dialog_negative">CANCEL</string>
    <string name="dialog_fragment_tag">dialog</string>
    <string name="minus_sign">-</string>

    <string name="snackbar_text">task completed</string>
    <string name="snackbar_action_undo">Undo</string>


    <string name="todo_later">TODO Later</string>
    <string name="active_task">Active Task</string>
    <string name="content_description">Image is here.</string>
    <string name="add_task">Add Task</string>
    <string name="five_min">5 min</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="set">Set</string>
    <string name="zero">0/200</string>
    <string name="no_summary_message">You don\'t have summary</string>
    <string name="total_text_length">200</string>

    <string name="no_task">No task available!!</string>

    <string name="license_dialog">Licenses</string>



</resources>
