<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/normal_padding">


    <TextView
        android:id="@+id/txt_current_date"
        style="@style/new_task_current_date_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/normal_margin"
        android:visibility="gone" />

    <ViewSwitcher
        android:id="@+id/viewSwitcher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/txt_active_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:longClickable="true"
            android:textColor="@android:color/white" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/ll_editTextContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/img_active_task_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:contentDescription="@string/content_description"
                    android:src="@drawable/circular_close" />

                <com.leapfrog.hokusfokus.widget.CustomEditText
                    android:id="@+id/edt_active_task"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/img_active_task_cancel"
                    android:hint="@string/add_task"
                    android:imeOptions="actionDone"
                    android:maxLength="200"
                    android:maxLines="10"
                    android:textSize="@dimen/new_task_text_size" />
            </RelativeLayout>

            <TextView
                android:id="@+id/txt_char_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/ll_editTextContainer"
                android:layout_marginTop="@dimen/normal_margin"
                android:text="@string/zero" />

        </RelativeLayout>
    </ViewSwitcher>
</LinearLayout>
